@@ -1,3 +1,8 @@
+2014-07-07  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	* sysdeps/powerpc/bits/link.h [_CALL_ELF]: Guard check for
+	__ELF_NATIVE_CLASS equal to 64.
+
 2014-07-07  Roland McGrath  <roland@hack.frob.com>
 
 	* sysdeps/nptl/lowlevellock.h: File removed.
